--- a/index.html
+++ b/index.html
@@ -58,15 +58,22 @@
               <div class="carousel-item active" data-bs-interval="10000">
                 <img id="img1" src="images/carrusel1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
+                  <h5></h5>
+                  <p>.</p>
+                </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img id="img2" src="images/carrusel2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
+                  <h5></h5>
+                  <p></p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img id="img3" src="images/carrusel3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
+                  <h5></h5>
+                  <p></p>
                 </div>
               </div>
             </div>
